--- a/lpytorch/transforms_tutorial.ipynb
+++ b/lpytorch/transforms_tutorial.ipynb
@@ -1,148 +1,172 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# For tips on running notebooks in Google Colab, see\n",
-    "# https://pytorch.org/tutorials/beginner/colab\n",
-    "%matplotlib inline"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/imadmaalouf02/Learn_PyTorch_for_beginners/blob/main/lpytorch/transforms_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MAks0y5qO6AF"
+      },
+      "outputs": [],
+      "source": [
+        "# For tips on running notebooks in Google Colab, see\n",
+        "# https://pytorch.org/tutorials/beginner/colab\n",
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Eera_NHSO6Ac"
+      },
+      "source": [
+        "[Learn the Basics](intro.html) \\|\\|\n",
+        "[Quickstart](quickstart_tutorial.html) \\|\\|\n",
+        "[Tensors](tensorqs_tutorial.html) \\|\\| [Datasets &\n",
+        "DataLoaders](data_tutorial.html) \\|\\| **Transforms** \\|\\| [Build\n",
+        "Model](buildmodel_tutorial.html) \\|\\|\n",
+        "[Autograd](autogradqs_tutorial.html) \\|\\|\n",
+        "[Optimization](optimization_tutorial.html) \\|\\| [Save & Load\n",
+        "Model](saveloadrun_tutorial.html)\n",
+        "\n",
+        "Transforms\n",
+        "==========\n",
+        "\n",
+        "Data does not always come in its final processed form that is required\n",
+        "for training machine learning algorithms. We use **transforms** to\n",
+        "perform some manipulation of the data and make it suitable for training.\n",
+        "\n",
+        "All TorchVision datasets have two parameters -`transform` to modify the\n",
+        "features and `target_transform` to modify the labels - that accept\n",
+        "callables containing the transformation logic. The\n",
+        "[torchvision.transforms](https://pytorch.org/vision/stable/transforms.html)\n",
+        "module offers several commonly-used transforms out of the box.\n",
+        "\n",
+        "The FashionMNIST features are in PIL Image format, and the labels are\n",
+        "integers. For training, we need the features as normalized tensors, and\n",
+        "the labels as one-hot encoded tensors. To make these transformations, we\n",
+        "use `ToTensor` and `Lambda`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DuSIqLGlO6Bf"
+      },
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "from torchvision import datasets\n",
+        "from torchvision.transforms import ToTensor, Lambda\n",
+        "\n",
+        "ds = datasets.FashionMNIST(\n",
+        "    root=\"data\",\n",
+        "    train=True,\n",
+        "    download=True,\n",
+        "    transform=ToTensor(),\n",
+        "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WYVrMFzLO6Bl"
+      },
+      "source": [
+        "ToTensor()\n",
+        "==========\n",
+        "\n",
+        "[ToTensor](https://pytorch.org/vision/stable/transforms.html#torchvision.transforms.ToTensor)\n",
+        "converts a PIL image or NumPy `ndarray` into a `FloatTensor`. and scales\n",
+        "the image\\'s pixel intensity values in the range \\[0., 1.\\]\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YOMgYI6QO6Bm"
+      },
+      "source": [
+        "Lambda Transforms\n",
+        "=================\n",
+        "\n",
+        "Lambda transforms apply any user-defined lambda function. Here, we\n",
+        "define a function to turn the integer into a one-hot encoded tensor. It\n",
+        "first creates a zero tensor of size 10 (the number of labels in our\n",
+        "dataset) and calls\n",
+        "[scatter\\_](https://pytorch.org/docs/stable/generated/torch.Tensor.scatter_.html)\n",
+        "which assigns a `value=1` on the index as given by the label `y`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "q11w_JZXO6Bo"
+      },
+      "outputs": [],
+      "source": [
+        "target_transform = Lambda(lambda y: torch.zeros(\n",
+        "    10, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y), value=1))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VWnCdCAJO6Bq"
+      },
+      "source": [
+        "------------------------------------------------------------------------\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "02LQo6UYO6Br"
+      },
+      "source": [
+        "Further Reading\n",
+        "===============\n",
+        "\n",
+        "-   [torchvision.transforms\n",
+        "    API](https://pytorch.org/vision/stable/transforms.html)\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Learn the Basics](intro.html) \\|\\|\n",
-    "[Quickstart](quickstart_tutorial.html) \\|\\|\n",
-    "[Tensors](tensorqs_tutorial.html) \\|\\| [Datasets &\n",
-    "DataLoaders](data_tutorial.html) \\|\\| **Transforms** \\|\\| [Build\n",
-    "Model](buildmodel_tutorial.html) \\|\\|\n",
-    "[Autograd](autogradqs_tutorial.html) \\|\\|\n",
-    "[Optimization](optimization_tutorial.html) \\|\\| [Save & Load\n",
-    "Model](saveloadrun_tutorial.html)\n",
-    "\n",
-    "Transforms\n",
-    "==========\n",
-    "\n",
-    "Data does not always come in its final processed form that is required\n",
-    "for training machine learning algorithms. We use **transforms** to\n",
-    "perform some manipulation of the data and make it suitable for training.\n",
-    "\n",
-    "All TorchVision datasets have two parameters -`transform` to modify the\n",
-    "features and `target_transform` to modify the labels - that accept\n",
-    "callables containing the transformation logic. The\n",
-    "[torchvision.transforms](https://pytorch.org/vision/stable/transforms.html)\n",
-    "module offers several commonly-used transforms out of the box.\n",
-    "\n",
-    "The FashionMNIST features are in PIL Image format, and the labels are\n",
-    "integers. For training, we need the features as normalized tensors, and\n",
-    "the labels as one-hot encoded tensors. To make these transformations, we\n",
-    "use `ToTensor` and `Lambda`.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torchvision import datasets\n",
-    "from torchvision.transforms import ToTensor, Lambda\n",
-    "\n",
-    "ds = datasets.FashionMNIST(\n",
-    "    root=\"data\",\n",
-    "    train=True,\n",
-    "    download=True,\n",
-    "    transform=ToTensor(),\n",
-    "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ToTensor()\n",
-    "==========\n",
-    "\n",
-    "[ToTensor](https://pytorch.org/vision/stable/transforms.html#torchvision.transforms.ToTensor)\n",
-    "converts a PIL image or NumPy `ndarray` into a `FloatTensor`. and scales\n",
-    "the image\\'s pixel intensity values in the range \\[0., 1.\\]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lambda Transforms\n",
-    "=================\n",
-    "\n",
-    "Lambda transforms apply any user-defined lambda function. Here, we\n",
-    "define a function to turn the integer into a one-hot encoded tensor. It\n",
-    "first creates a zero tensor of size 10 (the number of labels in our\n",
-    "dataset) and calls\n",
-    "[scatter\\_](https://pytorch.org/docs/stable/generated/torch.Tensor.scatter_.html)\n",
-    "which assigns a `value=1` on the index as given by the label `y`.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "target_transform = Lambda(lambda y: torch.zeros(\n",
-    "    10, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y), value=1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "------------------------------------------------------------------------\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Further Reading\n",
-    "===============\n",
-    "\n",
-    "-   [torchvision.transforms\n",
-    "    API](https://pytorch.org/vision/stable/transforms.html)\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 0
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
